# BWT-CodeCorps

backend/: database.py  main.py  pyproject.toml  requirements.txt
backend/models/: schemas.py
backend/routes/: chat.py  decision.py  expenses.py  profile.py
backend/services/: ai_service.py  metrics_engine.py
backend/utils/: clerk_auth.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.js  main.jsx  style.css  three-scene.js
frontend/src/components/canvas/: FinancialHero.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Decisions.jsx  LandingPage.jsx
frontend/src/services/: api.js
